--- a/drivers/linuxcnc/server/linuxcncserver.cbp
+++ b/drivers/linuxcnc/server/linuxcncserver.cbp
@@ -6,7 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="Debug-Linux">
 				<Option platforms="Unix;" />
 				<Option output="bin/Debug/linuxcncserver" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
@@ -15,9 +15,10 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-std=c++11" />
-					<Add directory="linuxcnc/src/emc/usr_intf" />
-					<Add directory="../include" />
-					<Add directory="linuxcnc/include" />
+					<Add directory="$(#LINUXCNC)/src/emc/usr_intf" />
+					<Add directory="$(#LINUXCNC)/include" />
+					<Add directory="../../../include" />
+					<Add directory="../../../src" />
 				</Compiler>
 				<Linker>
 					<Add library="protobuf" />
@@ -47,15 +48,17 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="../include/cnccomms.h" />
-		<Unit filename="../include/cncstate.h" />
-		<Unit filename="../include/cncstatebuf.pb.h" />
-		<Unit filename="../include/millisleep.h" />
-		<Unit filename="../src/cnccomms.cpp" />
-		<Unit filename="../src/cncstatebuf.pb.cc" />
-		<Unit filename="../src/cncstatebuf.proto" />
-		<Unit filename="linuxcnc/src/emc/usr_intf/shcom.cc" />
+		<Unit filename="linuxcnc.cpp" />
+		<Unit filename="linuxcnc.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="../../../include/cnccomms.h" />
+		<Unit filename="../../../include/cncserver.h" />
+		<Unit filename="../../../src/cnccomms.cpp" />
+		<Unit filename="../../../src/cncserver.cpp" />
+		<Unit filename="../../../src/cncstatebuf.proto">
+			<Option compile="1" />
+			<Option weight="0" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
