--- a/drivers/Sim/plugin/simplugin.cbp
+++ b/drivers/Sim/plugin/simplugin.cbp
@@ -7,7 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../../../plugins/$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option platforms="Windows;" />
+				<Option output="../../../bin/plugins/win32/$(PROJECT_NAME)_d" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -19,6 +20,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
+				<Option platforms="Windows;" />
 				<Option output="../../../plugins/linuxcnc" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
@@ -30,6 +32,39 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="Debug-Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../../bin/plugins/i386-linux-gnu/$(PROJECT_NAME)_d" prefix_auto="0" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="../../../include" />
+				</Compiler>
+				<Linker>
+					<Add library="protobuf-lite-3.1.0" />
+					<Add library="libzmq-4.2.3" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu" />
+				</Linker>
+			</Target>
+			<Target title="Release-Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../../bin/plugins/i386-linux-gnu/$(PROJECT_NAME)" prefix_auto="0" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add directory="../../../include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="protobuf-lite-3.1.0" />
+					<Add library="libzmq-4.2.3" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu" />
 				</Linker>
 			</Target>
 		</Build>
