--- a/drivers/Sim/server/sim.cbp
+++ b/drivers/Sim/server/sim.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug-Windows">
 				<Option platforms="Windows;" />
-				<Option output="./$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../bin/drivers/win32/$(PROJECT_NAME)d" prefix_auto="0" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -27,12 +27,12 @@
 					<Add library="zmq-4_2_1-32" />
 					<Add library="ws2_32" />
 					<Add library="IPHLPAPI" />
-					<Add directory="../../../libraries/lib" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu" />
 				</Linker>
 			</Target>
 			<Target title="Debug-Linux">
 				<Option platforms="Unix;" />
-				<Option output="../../../bin/drivers/i386-linux-gnu/$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../bin/drivers/i386-linux-gnu/$(PROJECT_NAME)_d" prefix_auto="0" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -43,11 +43,36 @@
 					<Add option="-std=c++11" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
+					<Add directory="../../../libraries/include" />
 				</Compiler>
 				<Linker>
-					<Add library="protobuf-lite-3_1_0" />
-					<Add library="zmq-4_2_1" />
-					<Add directory="../../../libraries/lib" />
+					<Add library="protobuf-lite-3.1.0" />
+					<Add library="zmq-4.2.3" />
+					<Add library="pthread" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu" />
+				</Linker>
+			</Target>
+			<Target title="Release-Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../../bin/drivers/i386-linux-gnu/$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Compiler>
+					<Add option="-march=i686" />
+					<Add option="-O3" />
+					<Add option="-std=c++11" />
+					<Add directory="../../../include" />
+					<Add directory="../../../src" />
+					<Add directory="../../../libraries/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="protobuf-lite-3.1.0" />
+					<Add library="zmq-4.2.3" />
+					<Add library="pthread" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu" />
 				</Linker>
 			</Target>
 		</Build>
