--- a/drivers/linuxcnc/plugin/linuxplugin.cbp
+++ b/drivers/linuxcnc/plugin/linuxplugin.cbp
@@ -6,7 +6,8 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="Debug-win32">
+				<Option platforms="Windows;" />
 				<Option output="../../../plugins/$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
@@ -18,18 +19,37 @@
 					<Add directory="../../../include" />
 				</Compiler>
 			</Target>
-			<Target title="Release">
-				<Option output="../../../plugins/linuxcnc" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+			<Target title="Debug-Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../../bin/plugins/i386-linux-gnu/$(PROJECT_NAME)_d" prefix_auto="0" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-g" />
+					<Add directory="../../../include" />
+				</Compiler>
+				<Linker>
+					<Add library="zmq-4.2.3" />
+					<Add library="protobuf-lite-3.1.0" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu/" />
+				</Linker>
+			</Target>
+			<Target title="Release-Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../../bin/plugins/i386-linux-gnu/$(PROJECT_NAME)" prefix_auto="0" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add directory="../../../include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="zmq-4.2.3" />
+					<Add library="protobuf-lite-3.1.0" />
+					<Add directory="../../../libraries/lib/i386-linux-gnu/" />
 				</Linker>
 			</Target>
 		</Build>
