--- a/drivers/linuxcnc/plugin/linuxplugin.cbp
+++ b/drivers/linuxcnc/plugin/linuxplugin.cbp
@@ -14,12 +14,13 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-D_CREATING_CLIENT" />
+					<Add option="-fvisibility=hidden" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
 				</Compiler>
 				<Linker>
+					<Add option="-fvisibility=hidden" />
 					<Add library="zmq-4.2.3" />
 					<Add library="protobuf-lite-3.1.0" />
 					<Add directory="../../../libraries/lib/i386-linux-gnu/" />
@@ -33,7 +34,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O3" />
-					<Add option="-D_CREATING_CLIENT" />
+					<Add option="-fvisibility=hidden" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
