--- a/drivers/linuxcnc/plugin/linuxplugin.cbp
+++ b/drivers/linuxcnc/plugin/linuxplugin.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="linuxplugin" />
+		<Option title="linuxcncplugin" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -15,6 +15,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-fvisibility=hidden" />
+					<Add option="-D_DEBUG" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
