Redesigned to run with clsocket instead of ZeroMQ

--- a/drivers/linuxcnc/server/linuxcncserver.cbp
+++ b/drivers/linuxcnc/server/linuxcncserver.cbp
@@ -17,11 +17,13 @@
 					<Add option="-g" />
 					<Add option="-O0" />
 					<Add option="-DULAPI" />
+					<Add option="-D_LINUX" />
 					<Add directory="$(LINUXCNC)/src/emc/usr_intf" />
 					<Add directory="$(LINUXCNC)/include" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
+					<Add directory="../../../src/clsocket/src" />
 				</Compiler>
 				<Linker>
 					<Add library="protobuf-lite-3.1.0" />
@@ -201,6 +203,14 @@
 		<Unit filename="../../../include/cnccomms.h" />
 		<Unit filename="../../../include/cncserver.h" />
 		<Unit filename="../../../include/timer.h" />
+		<Unit filename="../../../src/clsocket/src/ActiveSocket.cpp" />
+		<Unit filename="../../../src/clsocket/src/ActiveSocket.h" />
+		<Unit filename="../../../src/clsocket/src/Host.h" />
+		<Unit filename="../../../src/clsocket/src/PassiveSocket.cpp" />
+		<Unit filename="../../../src/clsocket/src/PassiveSocket.h" />
+		<Unit filename="../../../src/clsocket/src/SimpleSocket.cpp" />
+		<Unit filename="../../../src/clsocket/src/SimpleSocket.h" />
+		<Unit filename="../../../src/clsocket/src/StatTimer.h" />
 		<Unit filename="../../../src/cnccomms.cpp" />
 		<Unit filename="../../../src/cncplugin.cpp" />
 		<Unit filename="../../../src/cncserver.cpp" />
